不要な機能削除
